# standard-maintenance-scripts

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Gemfile  Makefile  README.md  Rakefile  badges-open-contracting-partnership.md  badges.md  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  tasks.py  tmp.rb
.github/workflows/: lint.yml  pages.yml  shell.yml
fixtures/: .travis.yml  Gemfile  mdlrc.rb
schema/: README.md  codelist-schema.json  extension-schema.json
scripts/: update_requirements.sh
tasks/: crm.rake  extensions.rake  fix.rake  local.rake  org.rake  pulls.rake  registry.rake  release.rake  repos.rake  resources.rake
tests/: install.sh  script.sh  test_csv.py  test_json.py  test_json_format.py  test_lint.sh  test_readme.py  test_requirements.py
