[project]
name = "standard-maintenance-scripts"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "PTH",
    "B028",  # warnings
    "FIX002",  # todo
    "PD011",
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["visit_*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]
